--- a/tools/extra/eosio_abigen_tool/eosio-abigen.cpp.in
+++ b/tools/extra/eosio_abigen_tool/eosio-abigen.cpp.in
@@ -112,7 +112,7 @@ class abigen : public generation_utils {
 
    void add_tuple(const clang::QualType& type) {
       auto pt = llvm::dyn_cast<clang::ElaboratedType>(type.getTypePtr());
-      auto tst = llvm::dyn_cast<clang::TemplateSpecializationType>(pt->desugar().getTypePtr());
+      auto tst = llvm::dyn_cast<clang::TemplateSpecializationType>(pt ? pt->desugar().getTypePtr() : type.getTypePtr());
       if (!tst)
          throw abigen_ex;
       abi_struct tup;
